<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutScreen"
    android:background="@color/purple50">

    <Button
        android:id="@+id/buttonInsaneDuo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style2"
        android:text="@string/insane_duo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/buttonDani"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style2"
        android:text="@string/daninhoque"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsaneDuo"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/buttonJuliano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style2"
        android:text="@string/juliano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEmailDani" />

    <Button
        android:id="@+id/buttonEmailJuliano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style2"
        android:text="@string/email_juliano"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJuliano"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonEmailDani"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style2"
        android:text="@string/email_dani"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDani" />

    <ImageView
        android:id="@+id/imageViewRandom"
        android:layout_width="173dp"
        android:layout_height="146dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEmailJuliano"
        app:layout_constraintVertical_bias="0.23000002"
        app:srcCompat="@drawable/random_image" />

</androidx.constraintlayout.widget.ConstraintLayout>