<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorScreen"
    android:background="@color/purple50">

    <EditText
        android:id="@+id/editTextValue1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_style2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_value1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextValue2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_style2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_value2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue1" />

    <Spinner
        android:id="@+id/spinnerOperation"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style2"
        android:entries="@array/spinner_Calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style2"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOperation"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextValue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_png" />
</androidx.constraintlayout.widget.ConstraintLayout>